refactor: optimize concurrency labs with virtual threads and reentrant locks